:fix: navbar spacing

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -148,7 +148,7 @@ nav
 		justify-content: right
 		background-color: transparent
 
-	#navbarNav
+	nav #navbarNav
 		margin-right: 20px !important
 
 	.navbar-toggler
